--- a/index.html
+++ b/index.html
@@ -7,8 +7,163 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header"></header>
-    <main class="main"></main>
-    <footer class="footer"></footer>
+    <header class="header">
+      <nav class="nav">
+        <div class="nav__container container">
+          <a href="./index.html" class="site__logo-link">
+            <img
+              src="./image/site-logo.svg"
+              width="64"
+              height="64"
+              alt="site logo"
+              class="site__logo-img"
+            />
+          </a>
+          <a href="#" class="btn nav__btn">Free Consultation</a>
+        </div>
+      </nav>
+      <div class="header__container container">
+        <div class="header__content">
+          <h1 class="header__title">Design solutions made easy</h1>
+          <p class="header__descraption">
+            With over ten years of experience in various design disciplines, I’m
+            your one-stop shop for your design needs.
+          </p>
+        </div>
+      </div>
+    </header>
+    <main class="main">
+      <section class="skills">
+        <div class="skills__container container">
+          <ul class="skils__list">
+            <li class="skills__item">
+              <h4 class="scills__name">Graphic Design</h4>
+            </li>
+            <li class="skills__item">
+              <h4 class="scills__name">UI/UX</h4>
+            </li>
+            <li class="skills__item">
+              <h4 class="scills__name">Apps</h4>
+            </li>
+            <li class="skills__item">
+              <h4 class="scills__name">Photography</h4>
+            </li>
+            <li class="skills__item">
+              <h4 class="scills__name">Illustrations</h4>
+            </li>
+            <li class="skills__item">
+              <h4 class="scills__name">Motion Graphics</h4>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="about-me">
+        <div class="about-me_container container">
+          <div class="about-me-image__wrapper">
+            <img
+              src="./image/about-me-img.png"
+              alt="my image"
+              width="445"
+              height="445"
+              class="about-me__image"
+            />
+          </div>
+          <div class="about-me__content">
+            <h2 class="about-me__title">
+              I’m Amy, and I’d love to work on your next project
+            </h2>
+            <p class="about-me__descraption">
+              I love working with others to create beautiful design solutions.
+              I’ve designed everything from brand illustrations to complete
+              mobile apps. I’m also handy with a camera!
+            </p>
+            <a href="#" class="btn about-me__btn">Free Consultation</a>
+          </div>
+        </div>
+      </section>
+      <section class="my-work">
+        <h3 class="my-work__title">My Work</h3>
+        <div class="my-work__image-wrapper">
+          <img
+            src="./image/my-work1.jpg"
+            alt="my work image"
+            class="my-work__image"
+            width="540"
+            height="360"
+          /><img
+            src="./image/my-work2.jpg"
+            alt="my work image"
+            class="my-work__image"
+            width="540"
+            height="360"
+          /><img
+            src="./image/my-work3.jpg"
+            alt="my work image"
+            class="my-work__image"
+            width="540"
+            height="360"
+          /><img
+            src="./image/my-work4.jpg"
+            alt="my work image"
+            class="my-work__image"
+            width="540"
+            height="360"
+          /><img
+            src="./image/my-work5.jpg"
+            alt="my work image"
+            class="my-work__image"
+            width="540"
+            height="360"
+          />
+        </div>
+        <div class="my-work-arrow-wrapper">
+          <button>
+            <img
+              src="./image/arrov-left.svg"
+              width="14.81"
+              height="16"
+              alt=""
+            />
+          </button>
+          <button>
+            <img
+              src="./image/arrow-right.svg"
+              width="14.81"
+              height="16"
+              alt=""
+            />
+          </button>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__mini__container container">
+        <div class="footer__mini__container-content">
+          <h2 class="footer__mini__container-content-title">
+            Book a call with me
+          </h2>
+          <p class="footer__mini__container-content-descraption">
+            I’d love to have a chat to see how I can help you. The best first
+            step is for us to discuss your project during a free consultation.
+            Then we can move forward from there.
+          </p>
+        </div>
+        <a href="#" class="btn footer__mini__container-content__btn"
+          >Free Consultation</a
+        >
+      </div>
+      <div class="footer__container container">
+        <a href="./index.html" class="site__logo-link">
+          <img
+            src="./image/site-logo.svg"
+            width="64"
+            height="64"
+            alt="site logo"
+            class="site__logo-img"
+          />
+        </a>
+        <a href="#" class="btn footer__btn">Free Consultation</a>
+      </div>
+    </footer>
   </body>
 </html>
